# plugged

./: Cargo.toml  README.md  flake.nix  plugged.service
.github/workflows/: rust.yml
src/: cli.rs  config.rs  main.rs  notify.rs  player.rs
